{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 418,
  "lineage": "cad4defe-7b31-8e28-0af4-3f064f670ce8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Mumbai-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:internet-gateway/igw-0d487d77908a51928",
            "id": "igw-0d487d77908a51928",
            "owner_id": "901896835187",
            "tags": {
              "Name": "Mumbai-IG"
            },
            "tags_all": {
              "Name": "Mumbai-IG"
            },
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mumbai-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:loadbalancer/app/Mumbai-LB/755d5c2546cbc1af",
            "arn_suffix": "app/Mumbai-LB/755d5c2546cbc1af",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Mumbai-LB-907624917.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:loadbalancer/app/Mumbai-LB/755d5c2546cbc1af",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Mumbai-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-007426ca8d3994788"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b40f1170c089af6"
              },
              {
                "subnet_id": "subnet-0dd198f824fd5f981"
              }
            ],
            "subnets": [
              "subnet-03b40f1170c089af6",
              "subnet-0dd198f824fd5f981"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-08fa2cb448d67d216",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.Mumbai-subnet-1a-pub",
            "aws_subnet.Mumbai-subnet-1b-pub",
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Mumbai-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:listener/app/Mumbai-LB/755d5c2546cbc1af/4fbed631911bd992",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:targetgroup/Terraform-Project/ca7f1109e04a74ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:listener/app/Mumbai-LB/755d5c2546cbc1af/4fbed631911bd992",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:loadbalancer/app/Mumbai-LB/755d5c2546cbc1af",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mumbai-LB",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.Mumbai-subnet-1a-pub",
            "aws_subnet.Mumbai-subnet-1b-pub",
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mumbai-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:targetgroup/Terraform-Project/ca7f1109e04a74ef",
            "arn_suffix": "targetgroup/Terraform-Project/ca7f1109e04a74ef",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:901896835187:targetgroup/Terraform-Project/ca7f1109e04a74ef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Terraform-Project",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai-RT-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:route-table/rtb-08ca1f35e1bc6c278",
            "id": "rtb-08ca1f35e1bc6c278",
            "owner_id": "901896835187",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Mumbai-RT"
            },
            "tags_all": {
              "Name": "Mumbai-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai-RT-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:route-table/rtb-0ad9d3bfc97b15d27",
            "id": "rtb-0ad9d3bfc97b15d27",
            "owner_id": "901896835187",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d487d77908a51928",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mumbai-RT"
            },
            "tags_all": {
              "Name": "Mumbai-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Mumbai-IG",
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-associaciation-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011e4483e16473593",
            "route_table_id": "rtb-0ad9d3bfc97b15d27",
            "subnet_id": "subnet-0dd198f824fd5f981"
          },
          "dependencies": [
            "aws_internet_gateway.Mumbai-IG",
            "aws_route_table.mumbai-RT-pub",
            "aws_subnet.Mumbai-subnet-1a-pub",
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-associaciation-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028bd0ea4ff23e852",
            "route_table_id": "rtb-0ad9d3bfc97b15d27",
            "subnet_id": "subnet-03b40f1170c089af6"
          },
          "dependencies": [
            "aws_internet_gateway.Mumbai-IG",
            "aws_route_table.mumbai-RT-pub",
            "aws_subnet.Mumbai-subnet-1b-pub",
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-associaciation-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0180d2814c8852faa",
            "route_table_id": "rtb-08ca1f35e1bc6c278",
            "subnet_id": "subnet-0e58229005d7af5c6"
          },
          "dependencies": [
            "aws_route_table.mumbai-RT-2",
            "aws_subnet.Mumbai-subnet-1a",
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-associaciation-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecfc845f6db8a951",
            "route_table_id": "rtb-08ca1f35e1bc6c278",
            "subnet_id": "subnet-0fae49e50b8c5c248"
          },
          "dependencies": [
            "aws_route_table.mumbai-RT-2",
            "aws_subnet.Mumbai-subnet-1b",
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mumbai_SG_allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:security-group/sg-007426ca8d3994788",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007426ca8d3994788",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from PC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "901896835187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mumbai-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:subnet/subnet-0e58229005d7af5c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e58229005d7af5c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901896835187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1a"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1a"
            },
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mumbai-subnet-1a-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:subnet/subnet-0dd198f824fd5f981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd198f824fd5f981",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901896835187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1a"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1a"
            },
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mumbai-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:subnet/subnet-0fae49e50b8c5c248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fae49e50b8c5c248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901896835187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1b"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1b"
            },
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mumbai-subnet-1b-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:subnet/subnet-03b40f1170c089af6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b40f1170c089af6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901896835187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1b"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1b"
            },
            "vpc_id": "vpc-08fa2cb448d67d216"
          },
          "dependencies": [
            "aws_vpc.Mumbai-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mumbai-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:901896835187:vpc/vpc-08fa2cb448d67d216",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa65f363c169d1f8",
            "default_route_table_id": "rtb-0d6c2ee1dce285a47",
            "default_security_group_id": "sg-0ffc092507a57bc4a",
            "dhcp_options_id": "dopt-0d45e956ebbc702c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fa2cb448d67d216",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6c2ee1dce285a47",
            "owner_id": "901896835187",
            "tags": {
              "Name": "Mumbai-VPC"
            },
            "tags_all": {
              "Name": "Mumbai-VPC"
            }
          }
        }
      ]
    }
  ]
}